# factorio-sensei

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  factorio-sensei-MVP.md
data/wiki/: factorio-mechanics.md  factorio-quick-reference.md
factorio-mod/: control.lua  info.json
src/: bridge.rs  cli.rs  error.rs  knowledge.rs  lib.rs  lua.rs  main.rs  mod_install.rs  rcon_ext.rs  repl.rs
src/agent/: mod.rs  prompts.rs
src/tools/: assemblers.rs  entities.rs  furnaces.rs  inventory.rs  mod.rs  position.rs  power.rs  production.rs  recipe.rs  research.rs  resources.rs
tests/: integration.rs
