[package]
name = "factorio-sensei"
version = "0.1.0"
edition = "2021"

[dependencies]
factorio-rcon = { path = "../factorio-rcon" }
rig-core = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
